BPER/DEVF/force-app/main/default/objects/CCOpportunityMatch__mdt/CCOpportunityMatch__mdt.object-meta.xml
<CustomObject>
    <label>Contact Center Opportunity Match</label>
    <pluralLabel>Contact Center Opportunity Matches</pluralLabel>
</CustomObject>