BPER/DEVF/force-app/main/default/objects/CCOpportunityMatch__mdt/fields/Assegnatario__c.field-meta.xml
<CustomField>
    <fullName>Assegnatario__c</fullName>
    <label>Assegnatario</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>