BPER/DEVF/force-app/main/default/objects/CCOpportunityMatch__mdt/fields/Esito__c.field-meta.xml
<CustomField>
    <fullName>Esito__c</fullName>
    <label>Esito</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accettata</fullName>
                <default>true</default>
                <label>Accettata</label>
            </value>
            <value>
                <fullName>Rifiutata</fullName>
            </value>
            <value>
                <fullName>Non raggiungibile</fullName>
            </value>
            <value>
                <fullName>Inviata Filiale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>