BPER/DEVF/force-app/main/default/objects/CCOpportunityMatch__mdt/fields/Prodotto__c.field-meta.xml
<CustomField>
    <fullName>Prodotto__c</fullName>
    <label>Prodotto</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>