BPER/DEVF/force-app/main/default/objects/CCOpportunityMatch__mdt/fields/StessoAssegnatario__c.field-meta.xml
<CustomField>
    <fullName>StessoAssegnatario__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stesso Assegnatario</label>
    <type>Checkbox</type>
</CustomField>